--- a/groups/index.html
+++ b/groups/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>Grouping Example</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-rc.1/angular.min.js"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-rc.1/angular-sanitize.min.js"></script>
+    
     <script src="app.js"></script>
     <script src="group.directive.js"></script>
     <style>
