--- a/groups/main.html
+++ b/groups/main.html
@@ -1,7 +1,7 @@
 <span>{{vm.title}}
 	<input placeholder="Enter search text" ng-keyup="vm.search(vm.rootGroup)"  ng-model="vm.query">
 	 
-		<md-group group="vm.rootGroup">
+		<md-group highlight="vm.highlight" group="vm.rootGroup">
 		</md-group>
 	
 </span>
